--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,6 +22,8 @@ jobs:
         python -m pip install --upgrade pip 
         # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        # переход в api_yamdb
+        cd api_yamdb/
         # установка зависимостей
         pip install -r requirements.txt 
 
