--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
-        # запустить тесты
+        # запуск тестов от разработчиков
         pytest
 
   build_and_push_to_docker_hub:
