--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -5,13 +5,9 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
-    # Запуск actions checkout — готового скрипта 
-    # для клонирования репозитория
     - uses: actions/checkout@v2
-    - name: Set up Python 
-      # для развёртывания окружения Python
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
@@ -58,6 +54,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -76,6 +73,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo DB_PORT=${{ secrets.SECRET_KEY }} >> .env
             sudo docker-compose up -d
 
   send_message:
